--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p style="text-align: center">This is my <a href="https://mabrane.weebly.com">webcomic</a></p>
             <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%">
         </div>
-        <script src="website.js" type="text/javascript"></script>
+        <script src="https://raw.githubusercontent.com/theusaf/theusaf.github.io/master/website.js" type="text/javascript"></script>
         <style src="website.css"></style>
     </body>
 </html>
