Attempt to fix JS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="shortcut icon" href="http://theusaf.weebly.com/uploads/3/8/8/3/38839699/theusaf-1_orig.png"></link>
     </head>
-    <body id="body" style="">
+    <body id="body" style="" onload="var sc = document.createElement('script'); sc.src = 'https://raw.githubusercontent.com/theusaf/theusaf.github.io/master/website.js'; document.body.append(sc)">
         <div thisisfor=youtube>
             <p style="text-align: center">This is my main <a href="https://theusaf.weebly.com">YouTube website</a></p>
             <p style="text-align:center; color: red;">You may want to allow all scripts on this page for it to work.</p>
