--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="shortcut icon" href="http://theusaf.weebly.com/uploads/3/8/8/3/38839699/theusaf-1_orig.png"></link>
     </head>
-    <body id="body" style="" onload="var sc = document.createElement('script'); sc.src = 'https://raw.githubusercontent.com/theusaf/theusaf.github.io/master/website.js'; document.body.append(sc)">
+    <body id="body" style="">
         <div thisisfor=youtube>
             <p style="text-align: center">This is my main <a href="https://theusaf.weebly.com">YouTube website</a></p>
             <p style="text-align:center; color: red;">You may want to allow all scripts on this page for it to work.</p>
@@ -14,6 +14,7 @@
             <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%">
         </div>
         <script src="https://cdn.rawgit.com/theusaf/theusaf.github.io/master/website.js" type="text/javascript"></script>
+        <script src="scripts/website.js" type="text/javascript"></script>
         <style src="website.css"></style>
     </body>
 </html>
