--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <!-- Imports HTML from https://theusaf.weebly.com to make editing easier :p -->
     <head>
         <link rel="shortcut icon" href="http://theusaf.weebly.com/uploads/3/8/8/3/38839699/theusaf-1_orig.png"></link>
+        <title>theusaf's Website!</title>
     </head>
     <body id="body" style="">
         <div thisisfor=youtube>
@@ -13,8 +14,10 @@
             <p style="text-align: center">This is my <a href="https://mabrane.weebly.com">webcomic</a></p>
             <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%">
         </div>
+        <!-- None of this works :( -->
+        <style src="website.css"></style>
         <script src="https://cdn.rawgit.com/theusaf/theusaf.github.io/master/website.js" type="text/javascript"></script>
         <script src="scripts/website.js" type="text/javascript"></script>
-        <style src="website.css"></style>
+        <script src="https://cdn.rawgit.com/theusaf/theusaf.github.io/master/scripts/website.js" type="text/javascript"></script>
     </body>
 </html>
