--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%">
         </div>
         <!-- None of this works :( -->
-        <style src="website.css"></style>
-        <script src="https://cdn.rawgit.com/theusaf/theusaf.github.io/master/website.js" type="text/javascript"></script>
-        <script src="scripts/website.js" type="text/javascript"></script>
-        <script src="https://cdn.rawgit.com/theusaf/theusaf.github.io/master/scripts/website.js" type="text/javascript"></script>
+        <div id="scripts">
+            <style src="website.css"></style>
+            <script src="scripts/website.js" type="text/javascript"></script>
+        </div>
     </body>
 </html>
