--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="shortcut icon" href="http://theusaf.weebly.com/uploads/3/8/8/3/38839699/theusaf-1_orig.png"></link>
         <title>theusaf's Website!</title>
+        <script src="scripts/website.js" type="text/javascript"></script>
     </head>
     <body id="body" style="">
         <div thisisfor=youtube>
