--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <!-- Imports HTML from https://theusaf.weebly.com to make editing easier :p -->
+    <!-- Imports HTML from https://theusaf.weebly.com to make editing easier :p It works:p-->
     <head>
         <link rel="shortcut icon" href="http://theusaf.weebly.com/uploads/3/8/8/3/38839699/theusaf-1_orig.png"></link>
         <title>theusaf's Website!</title>
