--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     </head>
     <body id="body" style="">
         <div thisisfor=youtube>
-            <p style="text-align: center">This is my main <a href="https://theusaf.weebly.com">YouTube website</a></p>
-            <p style="text-align:center; color: red;">You may want to allow all scripts on this page for it to work.</p>
-            <iframe src="https://theusaf.weebly.com" style="width: 80%; height: 60%; margin-left: 10%"></iframe>
+            <div style="background: grey; width: 70%; margin-left: 15%">
+                <p style="text-align: center">This is my main <a href="https://theusaf.weebly.com">YouTube website</a></p>
+                <p style="text-align:center; color: red;">You may want to allow all scripts on this page for it to work.</p>
+            </div>
+            <iframe src="https://theusaf.weebly.com" style="width: 80%; height: 60%; margin-left: 10%; border: blue 3px solid;"></iframe>
         </div>
         <div thisisfor=comic>
-            <p style="text-align: center">This is my <a href="https://mabrane.weebly.com">webcomic</a></p>
-            <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%">
+            <div style="background: grey; width: 70%; margin-left: 15%">
+                <p style="text-align: center">This is my <a href="https://mabrane.weebly.com">webcomic</a></p>
+            </div>
+            <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%; border: solid green 3px">
         </div>
         <!-- None of this works :( -->
         <div id="scripts">
