update drawephone game

--- a/Drawephone/index.html
+++ b/Drawephone/index.html
@@ -2,10 +2,11 @@
   <html>
     <head>
       <title>Drawephone!</title>
-    <head>
-    <body>
+    </head>
+    <body style="background: #00aaff">
+        <h1 id="title" style="text-align: center;">Drawephone</h1>
         <div id="game-container">
-            <canvas width=600 height=600 style="border: solid blue 3px"></canvas>
+            <canvas style="border: solid blue 10px; margin-left: 25%; background: white; width: 600px; height: 600px"></canvas>
         </div>
         <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
         <script src="main.js"></script>
