--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <script src="index.js" type="text/javascript"></script>
     </head>
     <body id="body" style="">
+        <div style="width: 100%; background: grey; text-align: center">
+            <a href="/Drawephone/"><h3>Drawephone!</h3></a>
+        </div>
         <div thisisfor=youtube>
             <div style="background: grey; width: 70%; margin-left: 15%">
                 <p style="text-align: center">This is my main <a href="https://theusaf.weebly.com">YouTube website</a></p>
@@ -19,7 +22,6 @@
             </div>
             <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%; border: solid green 3px">
         </div>
-        <a src="Drawephone/index.html">Drawephone!</a>
         <!-- None of this works :( -->
         <div id="scripts">
             <style src="index.css"></style>
