fixing main html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body id="body" style="">
         <div style="width: 100%; background: grey; text-align: center">
-            <a href="/Drawephone/"><h3>Drawephone!</h3></a>
+            <a href="/Drawephone/" title="Drawephone game"><h3>Drawephone!</h3></a>
         </div>
         <div thisisfor=youtube>
             <div style="background: grey; width: 70%; margin-left: 15%">
