--- a/Drawephone/index.html
+++ b/Drawephone/index.html
@@ -5,8 +5,18 @@
     </head>
     <body style="background: #00aaff">
         <h1 id="title" style="text-align: center;">Drawephone</h1>
-        <div id="game-container">
-            <canvas style="border: solid blue 10px; margin-left: 25%; background: white; width: 600px; height: 600px"></canvas>
+        <div id="game-container" style="float: left">
+            <canvas style="border: solid blue 10px; margin-left: 50%; background: white; width: 600px; height: 600px; float: left"></canvas>
+        </div>
+        <div style="float: left; z-index: 123; position: fixed">
+          <input type=text placeholder="Username" style="float:left"/>
+          <h4 style="float: left; position: fixed">Select Server</h4>
+          <select id="server" name="server" style="float: left; position: fixed; margin-top: 22px">
+            <option>Choose</option>
+            <option>Game1</option>
+            <option>Game2</option>
+            <option>Game3</option>
+          </select>
         </div>
         <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
         <script src="main.js"></script>
