--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body id="body" style="">
         <div style="width: 100%; background: grey; text-align: center">
             <a href="/Drawephone/" title="Drawephone game"><h3>Drawephone!</h3></a>
+            <a href="/Clash-Royale-Deck-Maker/" title="Create and Copy a Clash Royale Deck!"><h3>Clash Royale Deck Creator</h3></a>
         </div>
         <div thisisfor=youtube>
             <div style="background: grey; width: 70%; margin-left: 15%">
