adding leave feature + player list to Drawephone

--- a/Drawephone/index.html
+++ b/Drawephone/index.html
@@ -18,6 +18,13 @@
             <option>Game3</option>
           </select>
           <button id=submit style="width: 70px; height: 30px; float: left; position: absolute; margin-top: 70px; margin-left: -170px">Submit</button>
+          <table style="border: 1px solid black; margin-top: 110px">
+            <tr>
+              <th><strong><u>Players in the game:</u></strong></th>
+            </tr>
+            <tr style="color: lime" id="list">
+            </tr>
+          </table>
         </div>
         <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
         <script src="main.js"></script>
