--- a/Drawephone/index.html
+++ b/Drawephone/index.html
@@ -6,7 +6,7 @@
     <body style="background: #00aaff">
         <h1 id="title" style="text-align: center;">Drawephone</h1>
         <div id="game-container" style="float: left">
-            <canvas style="border: solid blue 10px; margin-left: 50%; background: white; width: 600px; height: 600px; float: left"></canvas>
+            <canvas style="border: solid blue 10px; background: white; margin-left: 50%; width: 600px; height: 600px; float: left"></canvas>
         </div>
         <div style="float: left; z-index: 123; position: fixed">
           <input type=text placeholder="Username" id="user" style="float:left"/>
