--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div style="width: 100%; background: grey; text-align: center">
             <a href="/Drawephone/" title="Drawephone game"><h3>Drawephone!</h3></a>
             <a href="/Clash-Royale-Deck-Maker/" title="Create and Copy a Clash Royale Deck!"><h3>Clash Royale Deck Creator</h3></a>
+            <a href="/Chat/" title="Chat game"><h3>Chat Game</h3></a>
         </div>
         <div thisisfor=youtube>
             <div style="background: grey; width: 70%; margin-left: 15%">
