--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
         <script src="index.js" type="text/javascript"></script>
     </head>
     <body id="body" style="">
-        <div style="width: 100%; background: grey; text-align: center">
-            <a href="/Drawephone/" title="Drawephone game"><h3>Drawephone!</h3></a>
-            <a href="/Clash-Royale-Deck-Maker/" title="Create and Copy a Clash Royale Deck!"><h3>Clash Royale Deck Creator</h3></a>
-            <a href="/Chat/" title="Chat game"><h3>Chat Game</h3></a>
+        <div style="width: 100%; background: grey; text-align: center; margin-left: 22%">
+            <a href="/Drawephone/" title="Drawephone game" style="display: inline; float: left; text-align:center"><h3 style="text-align:center">Drawephone! | </h3></a>
+            <a href="/Clash-Royale-Deck-Maker/" style="display: inline; float: left; text-align:center" title="Create and Copy a Clash Royale Deck!"><h3 style="text-align:center">Clash Royale Deck Creator | </h3></a>
+            <a href="/Chat/" title="Chat game" style="display: block; float: left; text-align:center"><h3 style="text-align:center">Chat Game | </h3></a>
         </div>
+        <br></br>
         <div thisisfor=youtube>
             <div style="background: grey; width: 70%; margin-left: 15%">
-                <p style="text-align: center">This is my main <a href="https://theusaf.weebly.com">YouTube website</a></p>
+                <p style="height: 0px; font-size: 8px; color: grey">hi</p>
+                <p style="text-align: center;">This is my main <a href="https://theusaf.weebly.com">YouTube website</a></p>
                 <p style="text-align:center; color: red;">You may want to allow all scripts on this page for it to work.</p>
             </div>
             <iframe src="https://theusaf.weebly.com" style="width: 80%; height: 60%; margin-left: 10%; border: blue 3px solid;"></iframe>
@@ -24,7 +26,6 @@
             </div>
             <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%; border: solid green 3px">
         </div>
-        <!-- None of this works :( -->
         <div id="scripts">
             <style src="index.css"></style>
             <script src="index.js" type="text/javascript"></script>
