--- a/Drawephone/index.html
+++ b/Drawephone/index.html
@@ -5,8 +5,13 @@
     </head>
     <body style="background: #00aaff">
         <h1 id="title" style="text-align: center;">Drawephone</h1>
-        <div id="game-container" style="float: left">
+        <div id="game-container" style="float: left; z-index: 30">
             <canvas style="border: solid blue 10px; background: white; margin-left: 50%; width: 600px; height: 600px; float: left"></canvas>
+            <div id="fi" style="display: none; z-index: 14; float:left; margin-top: -430px">
+              <p>You are the first player! Choose a theme!</p>
+              <input type="text" id="theme"></input>
+              <button style="width:70px; height: 30px" id="start">Start</button>
+            </div>
         </div>
         <div style="float: left; z-index: 123; position: fixed">
           <input type=text placeholder="Username" id="user" style="float:left"/>
