--- a/Drawephone/index.html
+++ b/Drawephone/index.html
@@ -15,14 +15,14 @@
         </div>
         <div style="float: left; z-index: 123; position: fixed">
           <input type=text placeholder="Username" id="user" style="float:left"/>
-          <h4 style="float: left; position: fixed">Select Server</h4>
-          <select id="server" name="server" style="float: left; position: fixed; margin-top: 40px; margin-left: -170px">
+          <h4 style="float: left; transform: translateX(-120px);">Select Server</h4>
+          <select id="server" name="server" style="float: left; position: fixed; margin-top: 40px; margin-left: -170px; transform: translateX(-40px);">
             <option>Choose</option>
             <option>Game1</option>
             <option>Game2</option>
             <option>Game3</option>
           </select>
-          <button id=submit style="width: 70px; height: 30px; float: left; position: absolute; margin-top: 70px; margin-left: -170px">Submit</button>
+          <button id=submit style="width: 70px;transform: translateX(-40px);; height: 30px; float: left; position: absolute; margin-top: 70px; margin-left: -170px">Submit</button>
           <table style="border: 1px solid black; margin-top: 110px">
             <tr>
               <th><strong><u>Players in the game:</u></strong></th>
