update css + index.html

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
         <link rel="shortcut icon" href="http://theusaf.weebly.com/uploads/3/8/8/3/38839699/theusaf-1_orig.png"></link>
         <title>theusaf's Website!</title>
         <script src="index.js" type="text/javascript"></script>
+        <link href="index.css" rel="stylesheet" type="text/css"></link>
+        <style>
+            @import url('https://fonts.googleapis.com/css?family=Spectral+SC');
+        </style>
     </head>
-    <body id="body" style="">
-        <div style="width: 100%; background: grey; text-align: center; margin-left: 22%">
-            <a href="/Drawephone/" title="Drawephone game" style="display: inline; float: left; text-align:center"><h3 style="text-align:center">Drawephone! | </h3></a>
-            <a href="/Chat/" title="Chat game" style="display: block; float: left; text-align:center"><h3 style="text-align:center">Chat Game | </h3></a>
+    <body id="body">
+        <h1 id=test>TEST</h1>
+        <div style="width: 100%; background: grey; text-align: center" id="top">
+            <a href="/Drawephone/" title="Drawephone game" style="display: block; text-decoration: none"><span style="color: brown"><b>Drawephone!</b></span></a>
+            <a href="/Chat/" title="Chat game" style="display: block; text-decoration: none"><span style="color: yellow"><b>Chat Game</b></span></a>
         </div>
-        <br></br>
         <div thisisfor=youtube>
             <div style="background: grey; width: 70%; margin-left: 15%">
-                <p style="height: 0px; font-size: 8px; color: grey">hi</p>
                 <p style="text-align: center;">This is my main <a href="https://theusaf.weebly.com">YouTube website</a></p>
                 <p style="text-align:center; color: red;">You may want to allow all scripts on this page for it to work.</p>
             </div>
@@ -23,10 +26,15 @@
             <div style="background: grey; width: 70%; margin-left: 15%">
                 <p style="text-align: center">This is my <a href="https://mabrane.weebly.com">webcomic</a></p>
             </div>
-            <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%; border: solid green 3px">
+            <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%; border: solid green 3px"></iframe>
+        </div>
+        <div thisisfor=shortr>
+            <div style="background: grey; width: 70%; margin-left: 15%">
+                <p style="text-align: center">This is my <a href="https://shortr.github.io">link shortener</a></p>
+            </div>
+            <iframe src="https://shortr.github.io" style="width: 80%; height: 60%; margin-left: 10%; border: solid red 3px"></iframe>
         </div>
         <div id="scripts">
-            <style src="index.css"></style>
             <script src="index.js" type="text/javascript"></script>
         </div>
     </body>
