update css + index.html

--- a/Drawephone/index.html
+++ b/Drawephone/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <title>Drawephone!</title>
+      <link href="index.css" rel="stylesheet" type="text/css"></link>
     </head>
     <body style="background: #00aaff">
         <h1 id="title" style="text-align: center;">Drawephone</h1>
