--- a/Drawephone/index.html
+++ b/Drawephone/index.html
@@ -8,6 +8,7 @@
         <h1 id="title" style="text-align: center;">Drawephone</h1>
         <div id="game-container" style="float: left; z-index: 30">
             <canvas style="border: solid blue 10px; background: white; margin-left: 50%; width: 600px; height: 600px; float: left"></canvas>
+            <h1 id="them">sadf</h1>
             <div id="fi" style="display: none; z-index: 14; float:left; margin-top: -430px">
               <p>You are the first player! Choose a theme!</p>
               <input type="text" id="theme"></input>
