Rename Chat to Polytopia, start working on new game

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id=test>TEST</h1>
         <div style="width: 100%; background: grey; text-align: center" id="top">
             <a href="/Drawephone/" title="Drawephone game" style="display: block; text-decoration: none"><span style="color: brown"><b>Drawephone!</b></span></a>
-            <a href="/Chat/" title="Chat game" style="display: block; text-decoration: none"><span style="color: yellow"><b>Chat Game</b></span></a>
+            <a href="/Polytopia/" title="Chat game" style="display: block; text-decoration: none"><span style="color: yellow"><b>Polytopia</b></span></a>
         </div>
         <div thisisfor=youtube>
             <div style="background: grey; width: 70%; margin-left: 15%">
