--- a/Polytopia/index.html
+++ b/Polytopia/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        
+        <link href="/index.css" rel="stylesheet" type="text/css"></link>
+        <title>Polytopia Online!</title>
     </head>
     <body>
         <script src="https://www.gstatic.com/firebasejs/4.5.2/firebase.js"></script>
