--- a/Polytopia/index.html
+++ b/Polytopia/index.html
@@ -1,9 +1,35 @@
 <html>
     <head>
-        <link href="/index.css" rel="stylesheet" type="text/css"></link>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-7270149282957761",
+        enable_page_level_ads: true
+      });
+        </script>
+        <link href="index.css" rel="stylesheet" type="text/css"></link>
         <title>Polytopia Online!</title>
     </head>
     <body>
+        <t>
+            <h1>Polytopia</h1>
+        </t>
+        <div class="br"></div>
+        <div class=adsl>
+            
+        </div>
+        <div class=center>
+            <canvas></canvas>
+        </div>
+        <div class=adsr>
+            
+        </div>
+        <div class=br></div>
+        <div class=left>
+            <p id="about">
+                Polytopia Online&#8482; is an online game based off of <a href="http://midjiwan.com/polytopia.html" target="_blank">Polytopia</a>. You control a tribe or city, build your army and defeat your enemies! There are also various different game modes to play in. The "Score" gamemode has the objective of being the first to get 10,000 points! The "Might" gamemode has the objective of defeating all your opponents to win! The "CTF" gamemode puts players in two teams, fighting to get the flags! The "KotH" gamemode has the objective of holding a base to get points. First to 20 wins!
+            </p>
+        </div>
         <script src="https://www.gstatic.com/firebasejs/4.5.2/firebase.js"></script>
         <script src="chat.js"></script>
     </body>
