updating polytopia css

--- a/Polytopia/index.html
+++ b/Polytopia/index.html
@@ -1,12 +1,7 @@
 <html>
     <head>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <script>
-      (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-7270149282957761",
-        enable_page_level_ads: true
-      });
-        </script>
+        <link href="favicon.ico" rel="icon">
+        </link>
         <link href="index.css" rel="stylesheet" type="text/css"></link>
         <title>Polytopia Online!</title>
     </head>
@@ -16,13 +11,31 @@
         </t>
         <div class="br"></div>
         <div class=adsl>
-            
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Sidebar-game ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7270149282957761"
+     data-ad-slot="8365308550"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         </div>
         <div class=center>
             <canvas></canvas>
         </div>
         <div class=adsr>
-            
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Sidebar-game ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7270149282957761"
+     data-ad-slot="8365308550"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         </div>
         <div class=br></div>
         <div class=left>
