--- a/Polytopia/index.html
+++ b/Polytopia/index.html
@@ -42,6 +42,12 @@
             <p id="about">
                 Polytopia Online&#8482; is an online game based off of <a href="http://midjiwan.com/polytopia.html" target="_blank">Polytopia</a>. You control a tribe or city, build your army and defeat your enemies! There are also various different game modes to play in. The "Score" gamemode has the objective of being the first to get 10,000 points! The "Might" gamemode has the objective of defeating all your opponents to win! The "CTF" gamemode puts players in two teams, fighting to get the flags! The "KotH" gamemode has the objective of holding a base to get points. First to 20 wins!
             </p>
+            <warn>
+                <div class=center>
+                In order to join or create a game, add the following to your URL:
+                ?action=create|join&key=gameCode
+                </div>
+            </warn>
         </div>
         <script src="https://www.gstatic.com/firebasejs/4.5.2/firebase.js"></script>
         <script src="chat.js"></script>
