Add Calculator to index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="/Drawephone/" title="Drawephone game" style="display: block; text-decoration: none"><span style="color: brown"><b>Drawephone!</b></span></a>
             <a href="/Polytopia/" title="Polytopia, but online" style="display: block; text-decoration: none"><span style="color: yellow"><b>Polytopia</b></span></a>
             <a href="/MCRecipe/" title="Minecraft Recipe Generator for 1.12+" style="display: block; text-decoration: none"><span style="color: green"><b>Recipe Creator</b></span></a>
+            <a href="/T130XCalc/" title="Calculator Tricks for the TI30XIIS" style="display: block; text-decoration: none"><span style="color: black"><b>Calculator Hacks</b></span></a>
         </div>
         <div thisisfor=youtube>
             <div style="background: grey; width: 70%; margin-left: 15%">
