--- a/TI30XCalc/index.html
+++ b/TI30XCalc/index.html
@@ -20,7 +20,10 @@
                     <input type='number' value=1 id='rn' max=9999999999 min=1/>
                     <br/>
                     <p>Amount of nums in the future.</p>
-                    <input type='number' value=2 id='re' min=1>
+                    <input type='number' value=2 id='re' min=1/>
+                    <br/>
+                    <p>Optional Starting and Finishing Numbers (Eg. RANDI(A,B))</p>
+                    <input type='number' id='st' class='sm' value=''/>&#8194;&#8194;<input type='number' id='ed' class='sm' value=''/>
                     <br/>
                     <p>Result:</p>
                     <textarea id="result" readonly></textarea>
