--- a/TI30XCalc/index.html
+++ b/TI30XCalc/index.html
@@ -23,6 +23,7 @@
                     <input type='number' value=2 id='re' min=1/>
                     <br/>
                     <p>Optional Starting and Finishing Numbers (Eg. RANDI(A,B))</p>
+                    <p>Note: Numbers may be off my 1, due to some weird behavior by the RANDI function</p>
                     <input type='number' id='st' class='sm' value=''/>&#8194;&#8194;<input type='number' id='ed' class='sm' value=''/>
                     <br/>
                     <p>Result:</p>
