fix chem project

--- a/ChemPres/index.html
+++ b/ChemPres/index.html
@@ -73,11 +73,15 @@
         */
         //runs scripts using eval() to do slides
         var evalList = {
+            //start screen
             0:["displayarea.innerHTML = '<div class=cen>\
                 <h1>The Chemistry and Science behind Apple Macbook Pros</h1>\
-                <img src=res/mcpro.png/>\
+                <img src=res/mcpro.png />\
             </div><h4 id=downcenter>Daniel Lau</h4>';","displayarea.style.background = 'gray'"],
-            1:[""]
+            //what is in the computer?
+            1:[],
+            //yay! kahoot game
+            2:["displayarea.style.background='white'","displayarea.innerHTML = '<h1 id=gameheader style=\"margin-left: 15px\">Kahoot!!!</h1><iframe class=fullsc src=https://play.kahoot.it/#/?quizId=3dc75cde-6580-439c-aa54-10ccaf1b05ed />'"]
         };
         function openSlide(){
             //renders the slides
