--- a/ChemPres/index.html
+++ b/ChemPres/index.html
@@ -218,7 +218,7 @@
             <img im=cake src=res/cake.png></img>';});\
             "],
             //yay! kahoot game
-            8:["clearInterval(no);","displayarea.style.background='white'","displayarea.innerHTML = '<h1 id=gameheader style=\"margin-left: 15px\">Kahoot!!!</h1><iframe class=fullsc src=https://play.kahoot.it/#/?quizId=3dc75cde-6580-439c-aa54-10ccaf1b05ed />'"]
+            8:["if(typeof(no) !== 'undefined'){clearInterval(no);}","displayarea.style.background='white'","displayarea.innerHTML = '<h1 id=gameheader style=\"margin-left: 15px\">Kahoot!!!</h1><iframe class=fullsc src=https://play.kahoot.it/#/?quizId=3dc75cde-6580-439c-aa54-10ccaf1b05ed />'"]
         };
         function openSlide(){
             //renders the slides
