--- a/ChemPres/index.html
+++ b/ChemPres/index.html
@@ -134,7 +134,7 @@
             6:["if(typeof(goup) !== 'undefined'){clearInterval(ups);}","displayarea.innerHTML = '<h1 class=ble>Conclusion</h1>\
             <p class=\"ble bigger par doub\">Computers are very complicated. On the outside, it looks like an Aluminum shell. However, on the inside are loads of complex, chemical and physical things that program the device. The computer&apos;s storage is millions upon millions of tiny transistors, storing data as electrons trapped in a floating gate. These electron are put there through quantum mechanics and removed with a negative charge. The battery of the computer is also very complicated chemistry. Ions and electrons are moved from a positive to a negative side to charge and discharge it.</p>';"],
             //sources​ &#9;//tab
-            7:["if(typeof(no) !== 'undefined'){clearInterval(no);}",
+            7:["displayarea.style.background = 'gray';","if(typeof(no) !== 'undefined'){clearInterval(no);}",
             "displayarea.innerHTML = '<div id=upward>\
                 <h1 style=text-align:center>Sources</h1>\
                 <ul class=url>\
